# ferroflex

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: analysis_2.3b.md  analysis_3.md  specifications.md
docs/df-csl/: df_fmac.txt
docs/df-csl/disk-images/:  2.3b_library-files_19880517.img   2.3b_library-files_19881227.img   2.3b_object-files_19880517.img   2.3b_object-files_19881227.img   2.3b_source-files_19880517.img
docs/df-csl/lib-files/: FLEXLIB.LIB  GRAPHCON.LIB  LIBRARY
docs/df-csl/obj-files/: OBJECT
docs/df-csl/src-files/: READ.ME  SOURCE
docs/df-csl/src-files/BAT/: BATLNK.TXT  OBJ.BAT  RCMP.BAT  RUNGLNK.BAT  RUNLNK.BAT  X.BAT
docs/df-csl/src-files/C/: CONGRP.C  ENTRYCMD.C  EXEC.C  EXPEVAL.C  EXPFUN.C  EXPRUN.C  FILEGRP.C  FINFGRP.C  FORMDP.C  FORMGRP.C  FORMIN.C  FORMPRT.C  HELP.C  INDCTGRP.C  INSTALLC.C  INTRGRP.C  MAKEL.C  MAKEPRJ.C  NOGRGRP.C  OPENGRP.C  PORT.TXT  PRINTGRP.C  PRTEDIT.C  RUNERROR.C  RUNTIME.C  SEQGRP.C  STRGRP.C
docs/df-csl/src-files/INCLUDE/: BITS.H  BLKIO.H  COMMAND.H  DFPROTO.H  DMSDEF.H  FLEX2CON.H  FLEX2DEF.H  FLEX2VAR.H  FONT.H  P2CINCLU.H  SCREENCD.H  SFCBTYPE.H  STANDARD.H  SYSTEM.H
docs/df-csl/src-files/LNK/: MAKEL.LNK  MAKEPRJ.LNK  NOGF.LNK  NOGF.PRJ  NOGNOF.LNK  NOGNOF.PRJ  RUN.LNK  RUNG.LNK
docs/kaitai-struct/: filelist.ksy  index.ksy  table.ksy  tag.ksy
ferroflex/: __init__.py
src/: dbapi.rs  enums.rs  exceptions.rs  lib.rs  utils.rs
src/dbapi/: connection.rs  cursor.rs  globals.rs  mod.rs  types.rs  wrappers.rs
src/gluesql/: mod.rs
src/sql/: alter.rs  index.rs  metadata.rs  mod.rs  store.rs  transaction.rs
src/structs/: column.rs  database.rs  filelist.rs  index.rs  mod.rs  segment.rs  table.rs  tagfile.rs
src/structs/table/: header.rs  mod.rs  row.rs
test_data/: dev_data.7z
tests/: __init__.py  common.rs  conftest.py  test_example.py  test_example.rs
